// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Bar component should render the search bar component 1`] = `
<div
  className="search_bar"
>
  <Form
    id="search-bar-form"
    method="post"
    onSubmit={[Function]}
  >
    <input
      name="authenticity_token"
      type="hidden"
      value=""
    />
    <TextInput
      disabled={false}
      helperText=""
      hideLabel={true}
      id="search_text"
      inline={false}
      invalid={false}
      invalidText=""
      labelText={"Search"}
      light={false}
      name="search[text]"
      onChange={[Function]}
      onClick={[Function]}
      placeholder="Search"
      title={"Search by Name within results"}
      type="text"
      value=""
      warn={false}
      warnText=""
    />
    <Button
      className="search_button"
      dangerDescription="danger"
      disabled={false}
      hasIconOnly={true}
      iconDescription="Search"
      isExpressive={false}
      kind="primary"
      renderIcon={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        }
      }
      size="default"
      tabIndex={0}
      tooltipAlignment="center"
      tooltipPosition="bottom"
      type="submit"
    />
  </Form>
  <Button
    dangerDescription="danger"
    data-target="#advsearchModal"
    data-toggle="modal"
    disabled={false}
    hasIconOnly={true}
    iconDescription="Advanced Search"
    id="adv_search"
    isExpressive={false}
    kind="primary"
    onClick={[Function]}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="default"
    tabIndex={0}
    title={"Advanced Search"}
    tooltipAlignment="end"
    tooltipPosition="bottom"
    type="button"
  />
</div>
`;

exports[`Search Bar component should render the search bar component with advanced search 1`] = `
<div
  className="search_bar"
>
  <Form
    id="search-bar-form"
    method="post"
    onSubmit={[Function]}
  >
    <input
      name="authenticity_token"
      type="hidden"
      value=""
    />
    <TextInput
      disabled={false}
      helperText=""
      hideLabel={true}
      id="search_text"
      inline={false}
      invalid={false}
      invalidText=""
      labelText={"Search"}
      light={false}
      name="search[text]"
      onChange={[Function]}
      onClick={[Function]}
      placeholder="Search"
      title={"Search by Name within results"}
      type="text"
      value=""
      warn={false}
      warnText=""
    />
    <Button
      className="search_button"
      dangerDescription="danger"
      disabled={false}
      hasIconOnly={true}
      iconDescription="Search"
      isExpressive={false}
      kind="primary"
      renderIcon={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        }
      }
      size="default"
      tabIndex={0}
      tooltipAlignment="center"
      tooltipPosition="bottom"
      type="submit"
    />
  </Form>
  <Button
    dangerDescription="danger"
    data-target="#advsearchModal"
    data-toggle="modal"
    disabled={false}
    hasIconOnly={true}
    iconDescription="Advanced Search"
    id="adv_search"
    isExpressive={false}
    kind="primary"
    onClick={[Function]}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="default"
    tabIndex={0}
    title={"Advanced Search"}
    tooltipAlignment="end"
    tooltipPosition="bottom"
    type="button"
  />
</div>
`;

exports[`Search Bar component should render the search bar component with search text and advanced search 1`] = `
<div
  className="search_bar"
>
  <Form
    id="search-bar-form"
    method="post"
    onSubmit={[Function]}
  >
    <input
      name="authenticity_token"
      type="hidden"
      value=""
    />
    <TextInput
      disabled={false}
      helperText=""
      hideLabel={true}
      id="search_text"
      inline={false}
      invalid={false}
      invalidText=""
      labelText={"Search"}
      light={false}
      name="search[text]"
      onChange={[Function]}
      onClick={[Function]}
      placeholder="Search"
      title={"Search by Name within results"}
      type="text"
      value="nameSearch"
      warn={false}
      warnText=""
    />
    <Button
      dangerDescription="danger"
      disabled={false}
      hasIconOnly={true}
      iconDescription="Clear"
      isExpressive={false}
      kind="secondary"
      onClick={[Function]}
      renderIcon={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        }
      }
      size="default"
      tabIndex={0}
      tooltipAlignment="center"
      tooltipPosition="bottom"
      type="reset"
    />
    <Button
      className="search_button"
      dangerDescription="danger"
      disabled={false}
      hasIconOnly={true}
      iconDescription="Search"
      isExpressive={false}
      kind="primary"
      renderIcon={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        }
      }
      size="default"
      tabIndex={0}
      tooltipAlignment="center"
      tooltipPosition="bottom"
      type="submit"
    />
  </Form>
  <Button
    dangerDescription="danger"
    data-target="#advsearchModal"
    data-toggle="modal"
    disabled={false}
    hasIconOnly={true}
    iconDescription="Advanced Search"
    id="adv_search"
    isExpressive={false}
    kind="primary"
    onClick={[Function]}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="default"
    tabIndex={0}
    title={"Advanced Search"}
    tooltipAlignment="end"
    tooltipPosition="bottom"
    type="button"
  />
</div>
`;
